--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-HersheyCodes - Hershee Fonts for Codea
+HersheyCodes - Hershey Fonts for Codea
 
--- - The Hershey Fonts were originally created by Dr.
+-- The Hershey Fonts were originally created by Dr.
 -- A. V. Hershey while working at the
 -- U. S. National Bureau of Standards.
 
